<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">BeautyRoom</string>

    <!-- Common needs -->
    <string name="unknown_placeholder">Неизвестно</string>

    <!-- Login -->
    <string name="sign_in_phone_hint">Введите номер телефона</string>
    <string name="sign_in_password_hint">Введите пароль</string>
    <string name="sign_in_password_confirm_hint">Подтвердите пароль</string>
    <string name="sign_in_button_sign_in">Войти</string>
    <string name="sign_in_button_sign_up">Регистрация</string>
    <string name="sign_in_description_label">Для продолжения действия необходимо авторизоваться</string>

    <!-- Auth -->
    <string name="sign_up_name_hint">Введите имя</string>

    <!-- Schedule -->
    <string name="schedule_appointment_title">Подтвердите запись</string>
    <string name="schedule_send_button">Записаться</string>

    <!-- Bottom navigation items -->
    <string name="masters_menu_item">Мастера</string>
    <string name="appointments_menu_item">Записи</string>

    <!-- Appointments screen -->
    <string name="appointments_button_remove">Отменить запись</string>
    <string name="appointments_remove_dialog_title">Отмена записи</string>
    <string name="appointments_remove_dialog_message">Вы уверены, что хотите отменить запись?</string>
    <string name="appointments_remove_dialog_positive">Да</string>
    <string name="appointments_remove_dialog_negative">Нет</string>

    <!-- Generic strings -->
    <string name="error_unknown">Что-то пошло не так, попробуйте ещё раз</string>

</resources>
